examples/scenarios/21-var-redeclaration-edge-cases/error-let-let.mncnk
chunk "Main" {
  let a: int = 1;
  let a: int = 2; // error: redeclaration in the same scope
};
moon(Main);
